crates/graphcal-project/tests/snapshots/error_snapshots__error_key_runtime_addend.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
expression: rendered
---
dimension mismatch: expected a static Nat constant, found Int
    Diagnostic severity: error
Begin snippet for key_runtime_addend.gcl starting at line 3, column 1

snippet line 3: 
snippet line 4: node k: Key<Fin(4)> = key(Fin(3), 1) + @n;
    label at line 4, columns 40 to 41: has type Int
diagnostic help: a runtime offset escapes any static bound; use `to_int(k) + e` and re-enter with fin_key()
diagnostic code: graphcal::D001
