crates/graphcal-project/tests/snapshots/error_snapshots__error_key_static_out_of_bounds.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
expression: rendered
---
key() position 5 is out of bounds for Fin(3)
    Diagnostic severity: error
Begin snippet for key_static_out_of_bounds.gcl starting at line 1, column 1

snippet line 1: // key() positions are compile-time membership-checked.
snippet line 2: node k: Key<Fin(3)> = key(Fin(3), 5);
    label at line 2, column 35: error here
diagnostic code: graphcal::I014
