crates/graphcal-project/tests/snapshots/error_snapshots__error_match_arm_type_mismatch.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
expression: rendered
---
dimension mismatch: expected Velocity, found Dimensionless
    Diagnostic severity: error
Begin snippet for match_arm_type_mismatch.gcl starting at line 10, column 1

snippet line 10:     Impulsive(delta_v: delta_v) => delta_v,
snippet line 11:     Coasting => 0.0,
    label at line 11, columns 17 to 19: has type Dimensionless
snippet line 12: };
diagnostic help: all match arms must return the same type
diagnostic code: graphcal::D001
